# GenAcademy

./: README.md
DailyTaskManager/: README.md  VIBE_CODING_SUBMISSION.md  app.py  requirements.txt  styles.py  validate.py
DailyTaskManager/components/: csv_handler.py  insights.py  sidebar.py  task_card.py  top_bar.py
DailyTaskManager/data/: tasks.json
DailyTaskManager/models/: task.py
DailyTaskManager/services/: task_service.py
DailyTaskManager/utils/: persistence.py
InsuranceRAG/: .gitignore  DEMO_SCRIPT.md  Home_Insurance_Agent_Assistant_Project2_Documentation.docx  README.md  app.py  chunking.py  comparison_report.md  eval.py  nebius.py  project_documentation.md  pyproject.toml  rag.py  reranker.py  retriever.py
InsuranceRAG/data/: eval_questions.json
InsuranceRAG/data/guidelines/: endorsements_manual.md  hazards_guidance.md  rating_rules.md  uw_guidelines_homeowners.md  uw_workflow_playbook.md
QuoteCopilot/: .env.example  .gitignore  README.md  quotecopilot_spec.md  requirements.txt  streamlit_app.py
QuoteCopilot/app/: __init__.py  config.py
QuoteCopilot/app/agents/: __init__.py  assessor.py  critic.py  enrichment.py  normalizer.py  packager.py  (+3 more)
QuoteCopilot/corpus/: 01_eligibility.md  02_occupancy.md  03_roof_property.md  04_hazard_wildfire_flood.md  05_rating_endorsements.md
QuoteCopilot/docs/: QuoteCopilot_Project_Writeup.docx
QuoteCopilot/evals/: dataset.json  run_evals.py
QuoteCopilot/scripts/: build_writeup.js  ingest_corpus.py
QuoteCopilot/tests/: conftest.py
QuoteCopilot/ui/: __init__.py  api_client.py  components.py  labels.py
(+40 files in other folders)
